# thesis-data-eda

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MEMORY.md  NIGHT_RUN_STATUS.md  PROJECT_STATUS.md  README.md  fix_bmad_installation.sh  project-context.md  pyproject.toml  requirements.txt
.bmad-loop/: bmad_loop_hook.py
.codex/: hooks.json
_bmad-output/implementation-artifacts/: 23-1-per-ticker-rf-baseline.md  23-2-news-feature-impact.md  23-3-multi-window-robustness.md  23-4-multi-horizon-extension.md  23-5-final-synthesis-report.md  23-6-research-agent-infrastructure.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md
config/: __init__.py
docs/: EDA_Guide_Stock_Volatility_Price_News.md  PRD.md  PROJECT_CONTEXT.md  THESIS_CHAPTER_NEWS_VOLATILITY.md  Technical_Architecture.md
docs/gpt-guide/: CLAUDE_IMPLEMENTATION_PLAN_NEWS_HAR_GNN.md  deep-research-report.md  (+4 more)
notebooks/: technical_research_eda.py
reports/: 2026-07-11_1430_data_source_setup_report.md  2026-07-11_1530_bmad_installation_report.md  2026-07-11_1700_bmad_agents_complete.md  2026-07-11_1900_Task1.1_Bronze_Import_Report.md  2026-07-11_2219_story1-1_eda_scaffold_report.md  2026-07-12_0805_all_epics_complete_report.md  2026-07-12_session_summary_epics1-9.md  2026-07-15_1530_summaryOfUpdate_report.md  2026-07-15_news_datamining_research.md  2026-07-18_0104_night_analysis.md  2026-07-18_0108_night_analysis.md  2026-07-18_0955_night_analysis.md  2026-07-18_1301_bao_cao_tien_do_phan_tich.md  2026-07-18_MORNING_SUMMARY.md  2026-07-20_2328_epic14_retrospective.md  2026-07-21_0230_market_eda_report.md  2026-07-21_2330_pk22_summary_report.md  2026-07-22_0400_night_run_log.md  2026-07-22_0400_retrospective_epic16.md  2026-07-22_0400_summaryOfUpdate_report.md  2026-07-22_0600_NightRun2_Summary_report.md  README.md  correlation_analysis_20260711_2038.json  correlation_analysis_20260711_2039.json  latest_night_run_summary.json  news_processing_log.md  night_analysis_log.md  technical_research_eda_2025_2026.md
scripts/: advanced_market_analysis.py  agent_watchdog.ps1  generate_report.py  launch_agents.ps1  market_eda_main.py  reencode_all_articles_gpu.py  run_reencode.ps1  stop_agents.ps1  verify_encode.py  view_correlations.py
src/: __init__.py
tests/: conftest.py  test_data_sources.py  test_smoke.py
(+166 files in other folders)
