[project]
name = "vietnam-stock-analysis"
version = "0.1.0"
description = "Vietnamese stock market news-price correlation analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "yfinance>=0.2.0",
    "arch>=6.0.0",
    "underthesea>=1.1.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=25.0.0",
    "streamlit>=1.59.1",
    "dcor>=0.7",
    "fastparquet>=2026.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "diff-cover>=9.0.0",
    "ruff>=0.5.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.0.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".agents",
    ".claude",
    "_bmad",
    ".bmad",
    "data/raw",
    "data/processed",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual typing
exclude = [
    "data/",
    "notebooks/",
    ".agents/",
    ".claude/",
]

[[tool.mypy.overrides]]
module = "underthesea.*,sentence_transformers.*,transformers.*,arch.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: Smoke tests that verify basic functionality",
    "slow: Slow-running tests",
    "integration: Tests that require external data/services",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
